--- a/views/main.html
+++ b/views/main.html
@@ -9,7 +9,7 @@
               <div class="card card-signup">
                 <div class="header header-primary text-center">
                   <h1 class="text-center">
-                    <img class="img-responsive" style="display: inline-block" src="images/logo-campanha.0f14ee9c.png" alt="{{appTitle}}" />
+                    <img class="img-responsive" style="display: inline-block; padding: 0 30px;" src="images/logo-campanha.0f14ee9c.png" alt="{{appTitle}}" />
                   </h1>
                   <br />
                   <h4>Login</h4>
