--- a/views/successregister.html
+++ b/views/successregister.html
@@ -1,3 +1,3 @@
 <h1 translate>Sucesso.Obrigado</h1>
 
-<p translate>Sucesso.DadosSucesso</p>
+<p>Obrigado! Seus dados foram recebidos com sucesso! Entraremos em contato para maiores detalhes e pagamento</p>
